# RF_chain_modeling

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
examples/: rf_chain_example.py
rf_chains/: rf_chain_example.py
rf_components/: zvq-183-s+.py  zvq-183-s+.tsv  zvq_183_s_plus.py
rf_subchains/: fake_aerial.py
rf_utils/: csv_data_table.py  rf_essential_components.py  rf_modeling.py  util_search_mediane.py
src/rf_chain_modeling/examples/: rf_modeling_example.py
src/rf_chain_modeling/rf_components/: zvq_183_s_plus.py
src/rf_chain_modeling/rf_subchains/: fake_aerial.py
src/rf_chain_modeling/rf_utils/: csv_data_table.py  rf_essential_components.py  rf_modeling.py  util_search_mediane.py
tests/: conftest.py  test_10_rf_modeling.py  test_20_components.py
tests/test_99_rf_components/: test_zvq_183_s_plus.py
